# Consciousness

./: .gitignore  .gitmodules  LICENSE  README.md
Consciousness/: .clang-format  .cmake-format  CMakeLists.txt  main.cpp
Consciousness/core/: config_store.cpp  config_store.h  core.h  platform.h  popup_manager.cpp  popup_manager.h  record.cpp  record.h  record_status.h
Consciousness/core/windows/: core.cpp  core.h
Consciousness/i18n/: Consciousness_zh_CN.ts  en.ts  en_US.ts  zh_CN.ts
Consciousness/utils/: QListWidgetWithKey.hpp  i18n.hpp  lock_view.hpp
Consciousness/window/: main_window.cpp  main_window.h  main_window.ui  popup.cpp  popup.h  popup.ui  tray.cpp  tray.h  tray.ui
